fixed few layout issues

--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -5,8 +5,8 @@
     position: absolute;
     top: 75px;
     right: 0;
-    /* height: 900px; */
-    width: 100%;
+    left: 0;
+    bottom: 0;
     background-color: rgba(0, 0, 0, .7);
     z-index: 1;
 }
@@ -16,10 +16,8 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    /* height: 600px; */
     width: 900px;
     backdrop-filter: blur(20px);
-    border: 1px solid #fff;
 }
 
 .sidebar-link {
@@ -27,6 +25,7 @@
     align-items: center;
     justify-content: center;
     height: 115px;
+    width: 100%;
     font-size: 28px;
     font-weight: 500;
     color: #e0e1dd;
